--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true kaliayev/docker-ci npm run test -- --coverage
+# deploy:
+# provider: elasticbeanstalk
+# region: "us-west-2"
+# app: "docker"
+# env: Docker-env
+# bucket_name: ""
+# bucket_path: "docker"
+# on:
+# branch: master
+# access_key_id: $AWS_ACCESS_KEY
+# secret_access_key:
+# secure: "$AWS_SECRET_KEY"
